--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-    "name": "CV_Builder/api",
+    "name": "vendor/package",
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
     },
     "require": {
-        "firebase/php-jwt": "^6.11"
+        "firebase/php-jwt": "^6.11",
+        "phpmailer/phpmailer": "^7.0"
     }
 }
