--- a/.htaccess
+++ b/.htaccess
@@ -8,4 +8,6 @@
 
     # وجّه أي طلب للـ index.php
     RewriteRule ^ index.php [QSA,L]
+
+    #SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 </IfModule>
